--- a/resume.html
+++ b/resume.html
@@ -91,7 +91,7 @@
         </div> 
 
         <div class="resume-download-center">
-            <a href="assets/resume/My Resume.pdf" class="main-download-btn" download="My-Resume">
+            <a href="assets/resume/my-resume.pdf" class="main-download-btn" download="My-Resume">
                 <i class="fas fa-file-download"></i> Download Full Resume
             </a>
         </div>
@@ -165,4 +165,5 @@
 
     <script src="js/resume.js"></script>
 </body>
+
 </html>
